<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="main-content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider_neon"/>

    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:background="@drawable/tab_bg"
        android:weightSum="5"
        android:contentDescription="bottom-nav">

        <LinearLayout
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="tab-home">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="◢"
                android:textSize="20sp"
                android:textColor="#FF22D3EE"/>
            <TextView
                android:id="@+id/tab_home_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home"
                android:textColor="#FFE6F0FF"
                android:textSize="11sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_categories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="tab-categories">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="❒"
                android:textSize="20sp"
                android:textColor="#FFA9B4D6"/>
            <TextView
                android:id="@+id/tab_categories_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_categories"
                android:textColor="#FFA9B4D6"
                android:textSize="11sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="tab-search">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="⌕"
                android:textSize="22sp"
                android:textColor="#FFA9B4D6"/>
            <TextView
                android:id="@+id/tab_search_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_search"
                android:textColor="#FFA9B4D6"
                android:textSize="11sp"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/tab_wishlist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="tab-wishlist">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="♥"
                    android:textSize="20sp"
                    android:textColor="#FFA9B4D6"/>
                <TextView
                    android:id="@+id/tab_wishlist_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_wishlist"
                    android:textColor="#FFA9B4D6"
                    android:textSize="11sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/badge_wishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:layout_marginTop="8dp"
                android:layout_marginRight="18dp"
                android:minWidth="18dp"
                android:textSize="10sp"
                android:textColor="#FF000000"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/badge_deal"
                android:visibility="gone"
                android:contentDescription="badge-wishlist"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/tab_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="tab-cart">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="▣"
                    android:textSize="20sp"
                    android:textColor="#FFA9B4D6"/>
                <TextView
                    android:id="@+id/tab_cart_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_cart"
                    android:textColor="#FFA9B4D6"
                    android:textSize="11sp"/>
            </LinearLayout>
            <TextView
                android:id="@+id/badge_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:layout_marginTop="8dp"
                android:layout_marginRight="18dp"
                android:minWidth="18dp"
                android:textSize="10sp"
                android:textColor="#FF000000"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/badge_deal"
                android:visibility="gone"
                android:contentDescription="badge-cart"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
